--- a/views/brokenAccess.ejs
+++ b/views/brokenAccess.ejs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <title>sigurnost</title>
 </head>
 <body>
-<div class="navbar">
-    <a href="/">XSS napad</a>
-    <a href="/brokenAccess">Loša kontrola pristupa </a>
-    <a href="/login">login </a>
-    <a href="/logout">login </a>
-
-</div>
+<nav class="navbar">
+    <ul class="nav-list">
+        <li><a href="/">XSS napad</a></li>
+        <li><a href="/brokenAccess">Loša kontrola pristupa </a></li>
+        <li><a href="/login">login </a></li>
+        <li><a href="/logout">logout </a></li>
+    </ul>
+</nav>
 
 <div>
     <br>
