--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <title>sigurnost</title>
 </head>
 <body>
-<div class="navbar">
-    <a href="/">XSS napad</a>
-    <a href="/brokenAccess">Loša kontrola pristupa </a>
-
-</div>
+<nav class="navbar">
+    <ul class="nav-list">
+        <li><a href="/">XSS napad</a></li>
+        <li><a href="/brokenAccess">Loša kontrola pristupa </a></li>
+    </ul>
+</nav>
 <div>
     <h1>XSS reflektirani napad</h1>
     <form method="POST" action="/actionsubmit">
