--- a/views/actionsubmit.ejs
+++ b/views/actionsubmit.ejs
@@ -14,9 +14,9 @@
 <h1>Traženi upit je:</h1>
 
 <% if (sigurnost === "safeOn") { %>
-    <p><%= upit %></p>
+    <p class="rezultat"><%= upit %></p>
 <% } else { %>
-    <p><%- upit %></p>
+    <p class="rezultat"><%- upit %></p>
 <% } %>
 </body>
 </html>
