--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
 <body>
 <h1>Login</h1>
-<form method="POST" action="/login">
+<form method="POST" action="/login" class="form-width">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required><br><br>
 
