--- a/views/management.ejs
+++ b/views/management.ejs
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <title>management</title>
 </head>
 <body>
+<nav class="navbar">
+    <ul class="nav-list">
+        <li><a href="/">XSS napad</a></li>
+        <li><a href="/brokenAccess">Loša kontrola pristupa </a></li>
+    </ul>
+</nav>
 <h1>management</h1>
 
 </body>
