--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,7 @@
         <li><a href="/brokenAccess">Loša kontrola pristupa </a></li>
     </ul>
 </nav>
-<h1>admin</h1>
+<h1>Admin info</h1>
 
 </body>
 </html>
