--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,9 +4,11 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
-<body>
-<h1>Login</h1>
-<form method="POST" action="/login" class="form-width">
+<body class="u-centru">
+<h1 class="u-centru poveznice-container">Login</h1>
+<div class="poveznice-container">
+
+    <form method="POST" action="/login" class="form-width">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required><br><br>
 
@@ -15,5 +17,6 @@
 
     <button type="submit">Login</button>
 </form>
+</div>
 </body>
 </html>
