--- a/views/management.ejs
+++ b/views/management.ejs
@@ -11,7 +11,7 @@
         <li><a href="/brokenAccess">Loša kontrola pristupa </a></li>
     </ul>
 </nav>
-<h1>management</h1>
+<h1>Management info</h1>
 
 </body>
 </html>
