razlika zaštićenog i nezaštićenog url

--- a/views/brokenAccess.ejs
+++ b/views/brokenAccess.ejs
@@ -22,9 +22,9 @@
     <a class="poveznice" href="/user">user info</a>
     <br>
 
-    <a class="poveznice" href="/admin">admin info</a>
+    <a class="poveznice" >admin info <br>(zaštićen url)</a>
     <br>
-    <p class="poveznice" > management info</p>
+    <p class="poveznice" > management info <br>(nezaštićen url)</p>
 </div>
 
 </body>
