fix post promjena lozinke

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -31,7 +31,7 @@
 </div>
 <div>
 <h3> Siguran način promjene lozinke</h3>
-<form  class="promjena" method="post" action="/promjenaLozinke" id="promjenaLozinke">
+<form  class="promjena" method="post" action="/promjenaLozinke1" id="promjenaLozinke">
 
     <label class ="naziv" for="loz2">Nova lozinka:</label><br>
     <input type="text" name="loz2" id="loz2" >
@@ -41,9 +41,5 @@
 </form>
 </div>
 </div>
-
-
-
-<p></p>
 </body>
 </html>
